--- a/webpage_initial_setup/templates/file_upload.html
+++ b/webpage_initial_setup/templates/file_upload.html
@@ -1,7 +1,8 @@
 <!doctype html>
 
 <title>Upload Text File</title>
-<h3>Hi, {{ user }}. <h3>
+<h2> {{ greetings }} </h2>
+<h3> {{ user }}. </h3>
 
 <h1>Upload Text File</h1>
 <form action="{{url_for('upload_file')}}" method="POST" enctype="multipart/form-data">
