--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -1,12 +1,32 @@
 <!doctype html>
+<head>
+	<style type="text/css">
+		body {
+    		text-align: center; /* IE */
+		}
+
+		#main {
+		    /*margin-left: auto;*/
+		    margin: auto;
+		    text-align: left;   /* IE */
+		    width: 100%;         /* Fill this out. */
+		}
+
+		form{
+			text-align: center; /* IE */
+			display: inline-block;
+		}
+	</style>
+</head>
 
 <title>Upload Text File</title>
-<h2> {{ greetings }} </h2>
-<h3> {{ user }}. </h3>
+<h2> {{ greetings}} : {{ user }} </h1>
+<!-- <h3> {{ user }}. </h3> -->
 
 <h1>Upload Text File</h1>
 <form action="{{url_for('upload_file')}}" method="POST" enctype="multipart/form-data">
-    <p><input type='file' name='file' multiple=''>
+    <p>
+    <input type='file' name='file' multiple=''>
     <input type='submit' value='upload'>
     </p>
 </form>
