--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,34 +1,58 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <style type="text/css">
+    body {
+        text-align: center; /* IE */
+        margin-left: auto;
+        margin-right: auto;
+        /*margin-right: auto;*/
+        width: 100%
+    }
+
+    #main {
+        margin-left: auto;
+        margin-right: auto;
+        text-align: left;   /* IE */
+        width: 100%;         /* Fill this out. */
+    }
+    .formDiv{
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%;
+    }
+    </style>
+
     <title>ERSP app</title>
-    <h2>Text-To-Speech Synthesizer</h2>
+    <h1>Text-To-Speech Synthesizer</h1>
   </head>
   
   
+  <body>
   
-  
-  <table>
-  <form action="{{url_for('hello')}}" method="post">
-      <tr>
-        <td align="right">User Name:</td> 
-        <td align="left"><input type="text" name="userName" ></td>
-        <td align="left"></td>
-      <tr>
+    <table>
+    <div class="formDiv">
+      <form action="{{url_for('hello')}}" method="post">
+          <tr>
+            <td align="right">User Name:</td> 
+            <td align="left"><input type="text" name="userName" ></td>
+            <td align="left"></td>
+          <tr>
 
 
-      <tr>
-        <td align="right">Email:</td> 
-        <td align="left"><input type="text" name="email" ></td>
-        <td align="left"></td>
-        
-        <td align="right"><input type="submit" value="Signup"></input></td>
-      <tr>
-  
-  </form>
-  </table>
-  <!--a href="{{ url_for('upload_file') }}"><button type="submit">Sign Up</button></a><br-->
-  
+          <tr>
+            <td align="right">Email:</td> 
+            <td align="left"><input type="text" name="email" ></td>
+            <td align="left"></td>
+            
+            <td align="right"><input type="submit" value="Signup"></input></td>
+          <tr>
+      
+      </form>
+    </div>
+    </table>
+  </body>
+
   
 </html>
 
