--- a/templates/requestAudio.html
+++ b/templates/requestAudio.html
@@ -1,8 +1,26 @@
 <!doctype html>
+<head>
+	<style type="text/css">
+		body {
+    		text-align: center; /* IE */
+		}
 
+		#main {
+		    /*margin-left: auto;*/
+		    margin: auto;
+		    text-align: left;   /* IE */
+		    width: 100%;         /* Fill this out. */
+		}
+
+		form{
+			text-align: center; /* IE */
+			display: inline-block;
+		}
+	</style>
+</head
 <title>Upload Audio File</title>
 
-<h3>Hi, {{ user }}. <h3>
+<h2>Hi, {{ user }}! <h2>
 <h1>Upload Audio File</h1>
 <form action="{{url_for('upload_audio')}}" method="POST" enctype="multipart/form-data">
     <p><input type='file' name='file' multiple=''>
