clean up the css

--- a/webpage_initial_setup/templates/hello.html
+++ b/webpage_initial_setup/templates/hello.html
@@ -3,8 +3,7 @@
   <head>
   <style type="text/css">
     body {
-        text-align: center; /* IE */
-        
+        text-align: center; 
         width: 100%
     }
 
