--- a/webpage_initial_setup/templates/requestAudio.html
+++ b/webpage_initial_setup/templates/requestAudio.html
@@ -1,8 +1,15 @@
 <!doctype html>
+<head>
+	<style type="text/css">
+		body {
+    		text-align: center; /* IE */
+		}
 
+	</style>
+</head
 <title>Upload Audio File</title>
 
-<h3>Hi, {{ user }}. <h3>
+<h2>Hi, {{ user }}! <h2>
 <h1>Upload Audio File</h1>
 <form action="{{url_for('upload_audio')}}" method="POST" enctype="multipart/form-data">
     <p><input type='file' name='file' multiple=''>
