--- a/webpage_initial_setup/templates/selectOptions.html
+++ b/webpage_initial_setup/templates/selectOptions.html
@@ -1,13 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
+<html>
+<head>
+	<style type="text/css">
+		body {
+    		text-align: center; /* IE */
+		}
 
-<title>Select your options</title>
-<h3>Hi, {{ user }}. <h3>
+	</style>
+	<title> Select your options </title>
+	<h2>Hi, {{ user }}! <h2>
+</head>
 
-<form action="{{url_for('select_options')}}" method="POST" enctype="multipart/form-data">
-	
-	Get the audio synthesized from your library<br>
-	<input type="submit" name="button1" value='synthesize' style="height:500px; width: 200px"><br><br>
-	Train your library<br>
-	<input type='submit' name='button1' value='add_lib' style="height:500px; width: 200px">
-	
-</form>
+<body>
+	<form action="{{url_for('select_options')}}" method="POST" enctype="multipart/form-data">
+		
+		Get the audio synthesized from your library<br>
+		<input type="submit" name="button1" value='synthesize' style="height:500px; width: 200px"><br><br>
+		Train your library<br>
+		<input type='submit' name='button1' value='add_lib' style="height:500px; width: 200px">
+		
+	</form>
+</body>
+</html>
