change review.html for finished success

--- a/webpage_initial_setup/templates/review.html
+++ b/webpage_initial_setup/templates/review.html
@@ -1,7 +1,25 @@
 <!doctype html>
 
-<title>Review your training</title>
+<html>
+  <head>
+  <style type="text/css">
+    body {
+        text-align: center; 
+        width: 100%
+    }
 
+    </style>
+
+    <title>Review your training</title>
+  </head>
+    
   <body>
-{{text}}
-        </body>
+    <h1> Success! </h1>
+    <h3> If you're synthesizing new file, the output should already in the folder. 
+    </h3>
+    <h3> If you're training the library, then you're done! </h3>
+
+  </body>
+</html>
+
+
