--- a/webpage_initial_setup/templates/review.html
+++ b/webpage_initial_setup/templates/review.html
@@ -15,9 +15,17 @@
     
   <body>
     <h1> Success! </h1>
+
     <h3> If you're synthesizing new file, the output should already in the folder. 
     </h3>
-    <h3> If you're training the library, then you're done! </h3>
+    <h3> If you're training the library, there is NO OUTPUT! </h3>
+    <form action="{{url_for('review')}}" method="POST" enctype="multipart/form-data">
+      
+    <br>
+    <input type="submit" name="output" value='output' style="height:500px; width: 200px"><br>
+      
+      
+    </form>
 
   </body>
 </html>
