session restore and fix up return user script request efficiency

--- a/webpage_initial_setup/templates/review.html
+++ b/webpage_initial_setup/templates/review.html
@@ -22,7 +22,8 @@
     <form action="{{url_for('review')}}" method="POST" enctype="multipart/form-data">
       
     <br>
-    <input type="submit" name="output" value='output' style="height:500px; width: 200px"><br>
+    <input type="submit" name="button2" value='output' style="height:500px; width: 200px"><br>
+    <input type="submit" name="button2" value='logout' style="height:500px; width: 200px"><br>
       
       
     </form>
